--- a/style.css
+++ b/style.css
@@ -1317,11 +1317,14 @@ button:focus {
     padding: 15px;
     box-shadow: 0 0 10px #2a2a2a;
     margin-bottom: 30px;
-    height: 100%;
+    height: 400px;    gap: 3px ;
     /* Ensure full height */
     display: flex;
     /* Flex layout for alignment */
     flex-direction: column;
+}
+#blog-section .row{
+    gap: 10px;
 }
 
 .blog-thumb {
